src/site/styles/custom-style.scss
body {
  // Override variables
  --icon-size: var(--icon-xs);  // Icons used in the timestamp at top of page
  
  // Dynamically change the font size of the h1 element in the navbar based on screen size
  .navbar-inner h1 {
    font-size: 28px !important; /* Default font size for h1 */
    margin-top: 15px;
  }
  
  @media (max-width: 500px) {
    .navbar-inner h1 {
      font-size: 16px !important; /* Adjusted font size for smaller screens (e.g., smartphones) */
    }
  }
  
  @media (min-width: 701px) and (max-width: 1023px) {
    .navbar-inner h1 {
      font-size: 25px !important; /* Adjusted font size for medium-sized screens (e.g., tablets) */
    }
  }
  
  @media (min-width: 1024px) {
    .navbar-inner h1 {
      font-size: 30px !important; /* Adjusted font size for larger screens (e.g., desktop monitors) */
    }
  }
  
  .search-button {
    margin: 10px 30px;
  }
  
  
  // Parent element containing prev/next seminar nav buttons
  p:has(button.obsidian-button) { 
    display: flex;
    justify-content: center;
    gap: 10%;
  }

  // Styles for generic buttons embedded in Obsidian notes
  .obsidian-button {
    padding: 10px 15px;
    text-align: center;
    color: #e8e8e8;
    background-color: #4d4d4e;
    border: 2px solid black;
    border-radius: 20px;
    transition: all 0.2s ease-in-out;

    &:hover {
      border: 2px solid var(--text-accent); 
      text-decoration: none;
    }

    &:active {
      background-color: #2c2c2c;
      border-color: var(--text-accent);
      color: var(--text-accent-hover);
      transform: translateY(1px);
    }


    & > a {
      text-decoration-line: none !important;
      font-weight: bold;
      font-size: 15px;
    }
  }

  // BTC price ticker at bottom of page
  .price-ticker {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1em;
    color: var(--text-muted);
    gap: 10px;
    margin-top: 30px;
  }
  
  .banner {
    max-width: 600px !important;
    width: 100% !important;
    display: block;
    margin: 10px auto 10px auto;
    border: none;
  }

  .search-button {
    border-radius: 10px;
  }

  // Main content on page pulled from Obsidian notes (not header/sidebar/footer)
  .cm-s-obsidian {
      .table-wrapper {
          overflow-x: scroll;
      }
      
      table {
        width: 100%;

        th, td {
          width: 33%;
          padding: 10px;
          text-align: center;
          font-size: 1rem !important;
        }
      }

      picture {
          height: auto;
          display: flex;
          justify-content: center;

          img {
              width: auto;
              height: auto;
              max-height: 500px;
          }
      }

      p img {
        margin: 10px;
      }

      h1 {
        font-size: 30px !important;
        margin-top: 1.5em;
        line-height: 2rem;
        margin-bottom: 25px;
      }

      h2, h3, h4, h5, h6 {
        margin-top: 20px !important;
        margin-bottom: 20px !important;
        line-height: 2rem;
      }

      header {
        text-align: center;
        margin-bottom: 25px;

        h1 {
            font-size: 40px !important;
            line-height: 3rem;
        }
      }

      ul {
        margin-block-end: 30px;
      }

      a.internal-link:hover {
        color: var(--text-accent-hover);
      }

      strong {
        color: var(--text-accent-hover);
      }
  }

  // The floating control tray on the bottom right of the page
  #floating-control {
      position: fixed;
      bottom: 1vmax;
      right: 3vmax;
      margin-right: -0.7em;
      font-size: 24px;
      z-index: 999999;
      display: flex;
      flex-direction: column;
      align-items: flex-end;
      gap: 5px;

      .svg-icon,
      i {
          cursor: pointer;
          height: 25px;
          width: auto;
          margin-top: 10px;

          &:not(#menu-close-icon):not(#menu-open-icon):hover {
            color: var(--text-accent-hover);
          }
          
          &:hover {
            animation: jiggle 0.4s ease-in-out;
          }
  
      }

      #theme-switch {
          .light {
              display: none;
          }

          .dark {
              display: none;
          }

          .auto {
              display: none;
          }
      }

      #theme-switch.light {
          .light {
              display: inline;
          }
      }

      #theme-switch.dark {
          .dark {
              display: inline;
          }
      }

      #theme-switch.auto {
          .auto {
              display: inline;
          }
      }

      .toggle-tray {
        margin-bottom: 0px;
      } 
  }

  // Hide the floating control icons when user clicks toggle button
  .show > * {
    display: none !important;
 }

  .wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
  }
  
  // Sponsors section on bottom of page
  .sponsors-section {
    text-align: center;
    border-top: 2px solid;
    margin-top: 75px;

    h1 {
      font-size: 25px !important;
    }

    .sponsor-list {
      display: grid;
      grid-template-columns: repeat(2, 1fr);
      grid-gap: 2em;
      margin-top: 40px;
      background-color: var(--table-line);
      padding: 5%;
  
      img {
          max-width: 80% !important;
          max-height: 70px;
          vertical-align: middle;

          &:hover {
            animation: lil-jiggle 0.4s ease-in-out;
          }
  
      }
    }
    
    .sponsor-logo {
      display: block;
      text-align: center;
    }
  } 

  .timestamps {
    display: flex;
    flex-direction: row;
    font-size: 0.7em !important;
    color: var(--text-muted);
    gap: 2%;
    margin-top: 10px;
    margin-bottom: 10px;
    justify-content: center;
    
    div {
        display: flex;
        flex-direction: row;
        gap: 7px;
        align-items: center;
    }
  }
}

.content {
  max-width: 1000px;
}

.theme-dark {
  --interactive-accent: #f2a900;
  --interactive-accent-rgb: 242, 169, 0;
  --interactive-accent-hover: #f2a900;
  --text-accent: #f2a900;
  --text-accent-hover: #f2a900;
  --text-selection: #4d4d4e;
  --link-unresolved-color: var(--text-faint);
}

.theme-light {
  --interactive-accent: #f2a900;
  --interactive-accent-rgb: 242, 169, 0;
  --interactive-accent-hover: #f2a900;
  --text-accent: #f2a900;
  --text-accent-hover: #f2a900;
  --text-selection: #e7e7e7;
  --link-unresolved-color: var(--text-faint);
}

@keyframes jiggle {
  0% {
    transform: rotateZ(0deg);
  }
  25% {
    transform: rotateZ(-10deg);
  }
  50% {
    transform: rotateZ(10deg);
  }
  75% {
    transform: rotateZ(-10deg);
  }
  100% {
    transform: rotateZ(0deg);
  }
}

@keyframes lil-jiggle {
  0% {
    transform: rotateZ(0deg);
  }
  25% {
    transform: rotateZ(-1deg);
  }
  50% {
    transform: rotateZ(1deg);
  }
  75% {
    transform: rotateZ(-1deg);
  }
  100% {
    transform: rotateZ(0deg);
  }
}

